--- a/front-end/src/app/pages/attendances/modaldayschedule/modaldayschedule.component.html
+++ b/front-end/src/app/pages/attendances/modaldayschedule/modaldayschedule.component.html
@@ -108,7 +108,8 @@
       <div>
         <ion-grid>
           <ion-row>
-            <ion-col size-md="6"><ion-button (click)="presentPopover($event)" fill="outline" shape="round">Also Apply</ion-button></ion-col>
+            <ion-col size-md="6">
+              <ion-button (click)="presentPopover($event)" fill="outline" shape="round">Also Apply</ion-button></ion-col>
             
             <ion-popover 
             #popover 
