--- a/front-end/src/app/pages/holidays/holidays.page.html
+++ b/front-end/src/app/pages/holidays/holidays.page.html
@@ -1,17 +1,9 @@
-<!-- <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>holidays-lists</ion-title>
-    <ion-button slot="end" shape="round" fill="clear" (click)="addHolidaylistAlert()">
-      <ion-icon name="add-outline"></ion-icon>
-    </ion-button>
-  </ion-toolbar>
-  
-</ion-header> -->
 
 <ion-header class="ion-no-border">
   <ion-toolbar color="primary">
     <ion-title class="ion-text-center">
-      Holiday
+      Holiday List<br>
+      <ion-note>{{(pageTitle)}}</ion-note>
     </ion-title>
     
     <ion-buttons slot="start">
@@ -21,15 +13,42 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button fill="clear" >
-        <ion-icon slot="icon-only" name="arrow-redo-circle-outline"></ion-icon>
+      <ion-button fill="clear" (click)="presentPopover($event)" >
+        <ion-icon  slot="icon-only" name="funnel-outline"></ion-icon>
       </ion-button>
+      <ion-popover 
+      #popover 
+      mode="ios"
+      [isOpen]="isOpen" 
+      (didDismiss)="isOpen = false">
+        <ng-template>
+          <ion-content color="light">
+            <ion-list>
+              <ion-item>
+                <ion-label>Latest</ion-label>
+              </ion-item>
+              <ion-item>
+                <ion-label>Oldest</ion-label>
+              </ion-item>
+              <ion-item>
+                <ion-label>Sort By Name</ion-label>
+              </ion-item>
+              <ion-item >
+                <ion-label>Default</ion-label>
+              </ion-item>
+            </ion-list>
+          </ion-content>
+        </ng-template>
+      </ion-popover>
+
+
+
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding" color="light">
-  <ion-searchbar placeholder='Search Gym' [(ngModel)]="searchTerm" showCancelButton="focus" animated></ion-searchbar>
+  <ion-searchbar placeholder='Search Holiday' [(ngModel)]="searchTerm" showCancelButton="focus" animated></ion-searchbar>
 <!-- to refresh page on pull down  -->
 <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
   <ion-refresher-content></ion-refresher-content>
@@ -38,15 +57,7 @@
 
 <ion-list [inset]="true" *ngFor="let h of holidayslist">
   <ion-item-sliding #itemSliding>
-    <!-- <ion-item [button]="true">
-      <ion-avatar aria-hidden="true" slot="start">
-        <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-      </ion-avatar>
-      <ion-label>Rick Astley</ion-label>
-
-    </ion-item> -->
-
-    <ion-item [button]="true" detail="false">
+     <ion-item [button]="true" detail="false">
       <div class="unread-indicator-wrapper" slot="start">
         <div class="unread-indicator"></div>
       </div>
