--- a/front-end/src/app/pages/attendances/attendances.page.html
+++ b/front-end/src/app/pages/attendances/attendances.page.html
@@ -23,7 +23,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" color="light">
   <form [formGroup]="memberForm" (ngSubmit)="onFormSubmit()">
     <div>
       <ion-list>
