--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -24,7 +24,7 @@ mode="ios" justify="start" aria-label="Gym"
   </ion-fab>
 
   <ion-fab class="ion-fab-1" slot="fixed" vertical="top" horizontal="end" [edge]="true">
-    <ion-fab-button (click)="addProduct()">
+    <ion-fab-button (click)="addMember()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
