--- a/front-end/src/app/pages/attendances/attendances.page.html
+++ b/front-end/src/app/pages/attendances/attendances.page.html
@@ -11,32 +11,23 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button fill="clear"
-      type="submit" 
-      [disabled]="!memberForm.valid" 
-      (click)="onFormSubmit()" >
-        <ion-icon slot="icon-only" name="arrow-redo-circle-outline"></ion-icon>
+      <ion-button fill="clear"  [routerLink]="['/gymtabs/infor']">
+        <ion-icon slot="icon-only" name="close-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-
-
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" color="light">
-  <form [formGroup]="memberForm" (ngSubmit)="onFormSubmit()">
+  <form [formGroup]="memberForm">
     <div>
       <ion-list>
-        <ion-item >
-          <ion-label>                 
-            <ion-input
-              label="Attendance Shift Name" 
-              labelPlacement="floating"                   
-              formControlName="shiftname"        
-              type="text" required>
-            </ion-input>                 
-        </ion-label>        
-          
+        <ion-item>
+          <ion-label>
+            <ion-input label="Attendance Shift Name" labelPlacement="floating" formControlName="shiftname" type="text"
+              required>
+            </ion-input>
+          </ion-label>
         </ion-item>
 
         <ion-item *ngIf="!isToggled">
@@ -45,124 +36,87 @@
               <ion-col size-md="6">
                 <ion-label>
                   <h2>In Time</h2>
-                  <ion-datetime-button  datetime ="Itime" formControlName="shift_start_time" ngDefaultControl></ion-datetime-button>
+                  <ion-datetime-button datetime="Itime" formControlName="shift_start_time"
+                    ngDefaultControl></ion-datetime-button>
                 </ion-label>
-                </ion-col>
+              </ion-col>
               <ion-col size-md="6">
                 <ion-label>
                   <h2>Out Time</h2>
-                 <ion-datetime-button  datetime ="Otime" formControlName="shift_end_time" ngDefaultControl></ion-datetime-button>
-              </ion-label>
-              <ion-text color="danger" *ngIf="memberForm.get('shift_end_time').hasError('endTimeInvalid')">
-                end Time must be after start Time.
-              </ion-text>
+                  <ion-datetime-button datetime="Otime" formControlName="shift_end_time"
+                    ngDefaultControl></ion-datetime-button>
+                </ion-label>
+                <ion-text color="danger" *ngIf="memberForm.get('shift_end_time').hasError('endTimeInvalid')">
+                  end Time must be after start Time.
+                </ion-text>
               </ion-col>
             </ion-row>
           </ion-grid>
-        
+
         </ion-item>
 
-            <ion-modal [keepContentsMounted]="true">
-              <ng-template>
-                <ion-datetime  
-                formControlName="shift_start_time"           
-                [value]="intimeValue"
-                [showDefaultButtons]="true"
-                presentation="time" 
-                hourCycle="h24"
-                id="Itime" 
-                #Itime
-                (ionChange)="InTimeChange($event)"></ion-datetime>
-              </ng-template>
-            </ion-modal>
-
-
-          
-
-        <!-- ion modal to get start and end time input -->
-
-
-        
-
-        <!-- <ion-item detail="true">
-          <ion-label>
-            <p>Weekdays</p>
-          </ion-label>
-          <ion-label slot="end">
-            <h2> All </h2>
-            <ion-input
-              label="Repeat:" label-placement="floating"
-              formControlName="repeat"         
-              type="boolean" required></ion-input>
-          </ion-label>
-        </ion-item> -->
-
-       
-
+        <ion-modal [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime formControlName="shift_start_time" [value]="intimeValue" [showDefaultButtons]="true"
+              presentation="time" hourCycle="h24" id="Itime" #Itime (ionChange)="InTimeChange($event)"></ion-datetime>
+          </ng-template>
+        </ion-modal>
       </ion-list>
     </div>
 
     <!-- [min]="intimeValue" -->
 
-    
+
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime
-        formControlName="shift_end_time" 
-        [min]="intimeValue"
-        [value]="outtimeValue"
-        [showDefaultButtons]="true"
-        presentation="time"
-        hourCycle="h24" 
-        id="Otime" 
-        #Otime
-        (ionChange)="OutTimeChange($event)"></ion-datetime>
+        <ion-datetime formControlName="shift_end_time" [min]="intimeValue" [value]="outtimeValue"
+          [showDefaultButtons]="true" presentation="time" hourCycle="h24" id="Otime" #Otime
+          (ionChange)="OutTimeChange($event)"></ion-datetime>
       </ng-template>
     </ion-modal>
 
 
   </form>
 
-  <ion-item>     
-    <ion-toggle 
-    mode="ios"
-    [enableOnOffLabels]="true"
-    justify="space-between"
-    color="danger"              
-    [ngModel]="isToggled" 
-    (ngModelChange)="notifyAndUpdateIsToggled($event)"> Custom Schedule
-    </ion-toggle>    
+  <ion-item>
+    <ion-toggle mode="ios" [enableOnOffLabels]="true" justify="space-between" color="danger" [ngModel]="isToggled"
+      (ngModelChange)="notifyAndUpdateIsToggled($event)"><strong>Custom Schedule</strong>
+    </ion-toggle>
   </ion-item>
 
 
-  
-    <div *ngIf="isToggled">
-          <ion-grid>
 
-            <ion-row>
-              <ion-col *ngFor="let day of weekdays ">
-                <ion-fab >
-                    <ion-fab-button [ngClass]="{'black-fab': day.isHoliday, 'blue-fab': !day.isHoliday}"  (click)="customTiming(day)">
-                    <ion-label  >{{day.name}}</ion-label>
-                  </ion-fab-button>
-                </ion-fab>
-              </ion-col>
-            </ion-row>
+  <div *ngIf="isToggled">
+    <ion-grid>
 
-            <ion-row class="col">
-              <ion-col *ngFor="let day of weekdays ">
-                    <ion-label (click)="customTiming(day)" [ngClass]="{'holiday-text': day.isHoliday}">{{day.punchIn | date:'HH:MM'}}</ion-label>                
-              </ion-col>
-            </ion-row>
+      <ion-row>
+        <ion-col *ngFor="let day of weekdays ">
+          <ion-fab>
+            <ion-fab-button [ngClass]="{'black-fab': day.isHoliday, 'blue-fab': !day.isHoliday}"
+              (click)="customTiming(day)">
+              <ion-label>{{day.name}}</ion-label>
+            </ion-fab-button>
+          </ion-fab>
+        </ion-col>
+      </ion-row>
 
-            <ion-row>
-              <ion-col *ngFor="let day of weekdays ">
-                    <ion-label (click)="customTiming(day)">{{day.punchOut | date:'HH:MM'}}</ion-label>                
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-    </div>
-   
+      <ion-row class="col">
+        <ion-col *ngFor="let day of weekdays ">
+          <ion-label (click)="customTiming(day)" [ngClass]="{'holiday-text': day.isHoliday}">{{day.punchIn |
+            date:'HH:MM'}}</ion-label>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col *ngFor="let day of weekdays ">
+          <ion-label (click)="customTiming(day)">{{day.punchOut | date:'HH:MM'}}</ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+
+  <ion-button type="submit" expand="block" shape="round" [disabled]="!memberForm.valid" (click)="onFormSubmit()"
+    [strong]="true">Update</ion-button>
 
 
 </ion-content>
