--- a/front-end/src/app/pages/member-details/member-details.page.html
+++ b/front-end/src/app/pages/member-details/member-details.page.html
@@ -49,11 +49,11 @@
       <ion-label class="ion-padding">Email id :{{member.email}}</ion-label>
     </ion-item>  
 
-    
+<!--     
          
       <ion-button shape="round" expand="block" (click)="editMember(member._id)">
         <ion-icon slot="icon-only" name="create"></ion-icon> EDIT
-      </ion-button>   
+      </ion-button>    -->
 
       
   </ion-list>
@@ -61,11 +61,11 @@
  
 </ion-content>
 
-<ion-footer [translucent]="true">
+<!-- <ion-footer [translucent]="true">
   <ion-toolbar>
-    <!-- <ion-title>Footer</ion-title> -->
+    <!-- <ion-title>Footer</ion-title> 
     <ion-button shape="round" expand="block" fill="outline" (click)="AddMore()">
       <ion-icon slot="end" name="chevron-forward-outline"></ion-icon> <strong> Add More Members</strong>
     </ion-button>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
