--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -86,15 +86,27 @@ mode="ios" justify="start" aria-label="Gym"
           color="primary" shape="round" fill="outline" expand="block" (click)="updateMemberControl(m._id)"
           (click)="deleteCodeIfacceptedOrExpired(m.email,true)"><ion-icon name="create"></ion-icon>Validity</ion-button>
        
-          <ion-button *ngIf="m.isInviteAccepted === 'Not'" [disabled]="isButtonSubmit" color="primary" shape="round"
-          fill="outline" expand="block" (click)="inviteMember(m._id)"><ion-icon
-            name="create"></ion-icon>Invite</ion-button>
-        
+          <div *ngIf="m.aadhar === 123; else memberApplied">
+            <ion-button *ngIf="m.isInviteAccepted === 'Not'" [disabled]="isButtonSubmit" color="primary" shape="round"
+              fill="outline" expand="block" (click)="inviteMember(m._id)"><ion-icon name="create"></ion-icon>Invite</ion-button>
+          
             <ion-button *ngIf="m.isInviteAccepted === 'pending'" [disabled]="isButtonSubmit" color="success" shape="round"
-          fill="outline" expand="block" (click)="inviteMember(m._id)"
-          (click)="deleteCodeIfacceptedOrExpired(m.email,false)"><ion-icon name="create"></ion-icon>Invited</ion-button>
-
-
+              fill="outline" expand="block" (click)="inviteMember(m._id)"
+              (click)="deleteCodeIfacceptedOrExpired(m.email,false)"><ion-icon name="create"></ion-icon>Invited</ion-button>
+          
+          </div>
+          <ng-template #memberApplied>
+            <ion-grid>
+              <ion-row>
+                <ion-col size-md="6">
+                  <ion-button (click)="rejectAppication($event)" fill="outline" shape="round">Reject</ion-button></ion-col>
+                                
+                <ion-col size-md="6">
+                  <ion-button shape="round" (click)="acceptApplication()" [strong]="true" >Accepted</ion-button>
+              </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ng-template>
       </ion-item-group>
     </ion-div>
   </ion-list>
