--- a/front-end/src/app/static/about/about.page.html
+++ b/front-end/src/app/static/about/about.page.html
@@ -21,7 +21,7 @@
     </ion-item>
     
     <ion-item>      
-        <ion-label> Current Version </ion-label>     
+        <ion-label> Current Version : {{appVersion}} </ion-label>     
         <ion-grid>
           <ion-row *ngFor="let key of keys">
             <ion-col style="text-align:right;">{{key}}</ion-col>
