--- a/front-end/src/app/static/about/about.page.html
+++ b/front-end/src/app/static/about/about.page.html
@@ -22,12 +22,12 @@
     
     <ion-item>      
         <ion-label> Current Version : {{appVersion}} </ion-label>     
-        <ion-grid>
+        <!-- <ion-grid>
           <ion-row *ngFor="let key of keys">
             <ion-col style="text-align:right;">{{key}}</ion-col>
             <ion-col style="text-align:left;font-weight:bold;">{{appInfo[key]}}</ion-col>
           </ion-row>
-        </ion-grid>
+        </ion-grid> -->
     
       </ion-item>
 
