--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -182,7 +182,7 @@ class="ion-no-border"
             </ion-toggle>    
       </ion-item>
 
-          <ion-item *ngIf="isAttendanceOn" detail="true" (click)="OpenHoliday()">      
+          <ion-item *ngIf="isHolidayOn" detail="true" (click)="OpenHoliday()">      
             <ion-label color="dark"><h2>Holiday Manager</h2></ion-label>
           </ion-item>
 
